changed file paths to be relative

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div id='graph3'></div>
     </div>
     <script src="https://cdn.plot.ly/plotly-3.0.1.min.js" charset="utf-8"></script>
-    <script type="module" src="constants.js"></script>
-    <script type="module" src="interpolateAnatomy.js"></script>
-    <script type="module" src="UIclasses/Button.js"></script>
-    <script type="module" src="UIclasses/Dropdown.js"></script>
-    <script type="module" src="UIclasses/getFontSize.js"></script>
-    <script type="module" src="UIclasses/NumberInput.js"></script>
-    <script type="module" src="UIclasses/Slider.js"></script>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./constants.js"></script>
+    <script type="module" src="./interpolateAnatomy.js"></script>
+    <script type="module" src="./UIclasses/Button.js"></script>
+    <script type="module" src="./UIclasses/Dropdown.js"></script>
+    <script type="module" src="./UIclasses/getFontSize.js"></script>
+    <script type="module" src="./UIclasses/NumberInput.js"></script>
+    <script type="module" src="./UIclasses/Slider.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
