--- a/Anatomy Code/index.html
+++ b/Anatomy Code/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin:0">
     <div style="display: none;">
-        <img id="image" src="/Users/ford/Desktop/Summer Internship 2025/Code/Anatomy Code/Overlays/Axial view.png"/>
+        <img id="image" src="Overlays/Axial view with dimensions.jpg"/>
     </div>
     <canvas id="canvas"></canvas>
     <script src="curveEditor.js"></script>
