(drawing tool) added param set support, made measuring tapes measure angle, added block rotation and translation updated UI to make it clear when adding a measuring tape

--- a/Anatomy Code/index.html
+++ b/Anatomy Code/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin:0">
     <div style="display: none;">
-        <img id="image" src="Overlays/Axial view with dimensions.jpg"/>
+        <img id="image" src="./Overlays/Axial view with dimensions.jpg"/>
     </div>
     <canvas id="canvas"></canvas>
     <script src="curveEditor.js"></script>
