--- a/Anatomy Code/index.html
+++ b/Anatomy Code/index.html
@@ -10,6 +10,6 @@
         <img id="image" src="./Overlays/Axial view with dimensions.jpg"/>
     </div>
     <canvas id="canvas"></canvas>
-    <script src="curveEditor.js" type="module"></script>
+    <script src="curveEditor.js"></script>
 </body>
 </html>
